--- a/web/app/themes/nerdpress/style.css
+++ b/web/app/themes/nerdpress/style.css
@@ -4,6 +4,9 @@ Theme URI: http://nerdpress.org
 Description: The 2011 theme for Nerdpress
 */
 
+@import 'css/normalize.css';
+@import 'css/skeleton.css';
 @import 'css/reset.css';
 @import 'css/layout.css';
 @import 'css/typo.css';
+@import 'css/responsive.css';
