--- a/web/app/themes/nerdpress/css/typo.css
+++ b/web/app/themes/nerdpress/css/typo.css
@@ -1,69 +1,70 @@
 /*common*/
 
-.wrap{
-  font-family: Times, serif;
-  font-size: 14px;
+.wrap {
+    font-family: Times, serif;
+    font-size: 1.5rem;
 }
 
-a{
-  color:#4796b9;
-  text-decoration: none;
+a {
+    color: #4796b9;
+    text-decoration: none;
 }
 
 .sidebar a:hover,
-.post a:hover{
-  text-decoration: underline;
+.post a:hover {
+    text-decoration: underline;
 }
 
 /*header*/
 
-.header .date{
-  font-size:18px;
-  text-transform: uppercase;
+.header .date {
+    font-size: 2rem;
+    text-transform: uppercase;
 }
 
-.header h1{
-  font-size: 72px;
+.header h1 {
+    font-size: 6.5rem;
 }
 
-.header h1 a{
-  color: #000;
-  text-decoration: none;
+.header h1 a {
+    color: #000;
+    text-decoration: none;
 }
 
 /*post*/
 
 .post h2,
 .post h2 a,
-h3#comments{
-  font-size: 24px;
-  color: #000;
-  text-decoration: none;
+h3#comments {
+    font-size: 24px;
+    color: #000;
+    text-decoration: none;
 }
 
 div#respond,
 .commentlist li,
-.post .content p{
-  font-family: Helvetica, Arial, sans-serif;
-  line-height: 19px;
-  margin-bottom: 18px;
+.post .content p {
+    font-family: Helvetica, Arial, sans-serif;
+    line-height: 19px;
+    margin-bottom: 18px;
 }
 
-.post .content ul li{
-  font-family: Helvetica, Arial, sans-serif;
-  line-height: 18px;
+.post .content ul li {
+    font-family: Helvetica, Arial, sans-serif;
+    line-height: 18px;
+    color: #999
 }
 
-#commentform label{
-  font-size: 14px;
-  font-family: Helvetica, Arial, sans-serif;
+#commentform label {
+    font-size: 14px;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 #commentform input,
-#commentform textarea{
-  margin-top: 10px;
+#commentform textarea {
+    margin-top: 10px;
 }
 
-.pagination{
-  font-family: Helvetica, Arial, sans-serif;
+.pagination {
+    font-family: Helvetica, Arial, sans-serif;
 }
